Fixed z-index of modal dialog to be above background but not above absolutely everything ever

--- a/css/basic.css
+++ b/css/basic.css
@@ -45,7 +45,7 @@ button.no-style, button.no-style:hover, button.no-style:focus, buttton.no-style:
 
 .modal { overflow-y: auto; }
 .reveal-modal-bg { background: rgba(0, 0, 0, 0.75); position: fixed; }
-.reveal-modal, dialog { border: 0 none; box-shadow: 0 0 6px rgba(0, 0, 0, 0.5); z-index: 10000; }
+.reveal-modal, dialog { border: 0 none; box-shadow: 0 0 6px rgba(0, 0, 0, 0.5); z-index: 1005; }
 .reveal-modal .close-reveal-modal, dialog .close-reveal-modal { font-weight: normal; }
 .reveal-modal.full, dialog.full { box-shadow: none; }
 .reveal-modal.full { top: 0 !important; bottom: 0; overflow-y: auto; position: fixed; }
